# scrapingpy-template

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
html/: index.html  style.css
scraping/: main.py
